# ai-engineering-90-days

./: .gitignore  README.md  lo-trinh-90-ngay-ai-engineer-moi-truong.docx
.devcontainer/: devcontainer.json
.github/workflows/: monorepo-ci.yml  project-2-ci.yml
docs/: 90-day-ai-engineering-roadmap.md
project_#1_env-semantic-search/: .embedding_cache.json  .env.example  Dockerfile  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  requirements.txt
project_#1_env-semantic-search/data/chroma_db/: chroma.sqlite3
project_#1_env-semantic-search/data/documents/: air_quality_pollution_guide.md  bien_doi_khi_hau_vietnam.md  climate_change_overview.md  esg_sustainability_guide.md  nuoc_thai_xu_ly.md  renewable_energy_guide.md
project_#1_env-semantic-search/data/sample_queries/: test_queries.json
project_#1_env-semantic-search/docs/: api_reference.md  architecture.md
project_#1_env-semantic-search/scripts/: evaluate_search.py  index_documents.py
project_#1_env-semantic-search/src/: __init__.py  api.py  app.py  cli.py  config.py  document_processor.py  embeddings.py  search_engine.py  utils.py  vector_store.py
project_#1_env-semantic-search/tests/: __init__.py  test_search.py
project_#2_climate-qa-rag/: .env.example  Dockerfile  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
project_#2_climate-qa-rag/data/chroma_db/: chroma.sqlite3
project_#2_climate-qa-rag/data/sample/: bien_doi_khi_hau_vietnam.md  climate_change_overview.md  dau_chan_carbon_khi_thai.md  esg_sustainability_guide.md  giao_thong_xanh.md  hiep_dinh_paris_chinh_sach_quoc_te.md  kinh_te_tuan_hoan.md  nang_luong_tai_tao.md  nguyen_nhan_bien_doi_khi_hau.md  tac_dong_nong_nghiep.md
project_#2_climate-qa-rag/docs/: deployment.md
project_#2_climate-qa-rag/scripts/: evaluate.py  index_documents.py
project_#2_climate-qa-rag/src/: __init__.py  api.py  app.py  chain.py  cli.py  config.py  document_loader.py  embeddings.py  llm.py  prompts.py  reranker.py  retriever.py  utils.py  vector_store.py
project_#2_climate-qa-rag/tests/: __init__.py  test_chain.py
project_#3_Multi-Agent Environmental Research System/: .env.example  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  requirements.txt
project_#3_Multi-Agent Environmental Research System/docs/: agent_design.md  architecture.md
project_#3_Multi-Agent Environmental Research System/examples/: climate_research.py
project_#3_Multi-Agent Environmental Research System/src/: __init__.py  app.py  config.py  main.py  orchestrator.py
project_#3_Multi-Agent Environmental Research System/src/agents/: __init__.py  analyst.py  base.py  fact_checker.py  researcher.py  writer.py
project_#3_Multi-Agent Environmental Research System/src/tools/: __init__.py  citation.py  web_search.py
project_#3_Multi-Agent Environmental Research System/src/workflows/: __init__.py  base.py  deep_dive.py  quick_research.py
project_#3_Multi-Agent Environmental Research System/tests/: __init__.py  test_agents.py
project_#4_Environmental Domain LLM Fine-tuning/: .env.example  Dockerfile  QUICKSTART.md  README.md  requirements.txt
project_#4_Environmental Domain LLM Fine-tuning/configs/: lora_config.yaml  qlora_config.yaml
project_#4_Environmental Domain LLM Fine-tuning/data/evaluation/: benchmark_questions.json
project_#4_Environmental Domain LLM Fine-tuning/docs/: architecture.md
project_#4_Environmental Domain LLM Fine-tuning/notebooks/: 01_training_demo.ipynb
project_#4_Environmental Domain LLM Fine-tuning/scripts/: demo_api.py  evaluate.py  export_model.py  merge_lora.py  prepare_data.py  train.py
project_#4_Environmental Domain LLM Fine-tuning/src/: __init__.py  config.py  data_processor.py  dataset.py  inference.py  model_utils.py  trainer.py
project_#4_Environmental Domain LLM Fine-tuning/tests/: test_finetune.py
project_#5_EIA Generator - Capstone Project/: .env.example  Dockerfile  QUICKSTART.md  README.md  app.py  docker-compose.yml  requirements.txt
project_#5_EIA Generator - Capstone Project/.streamlit/: config.toml
project_#5_EIA Generator - Capstone Project/configs/: agents.yaml
project_#5_EIA Generator - Capstone Project/docs/: PROJECT_SUMMARY.md
project_#5_EIA Generator - Capstone Project/outputs/: EIA_Nhà máy điện mặt trời Ninh Thuận.json  eia_20260120_093549.docx
project_#5_EIA Generator - Capstone Project/src/: __init__.py  config.py  llm.py  main.py  orchestrator.py
project_#5_EIA Generator - Capstone Project/tests/: test_eia_generator.py
(+25 files in other folders)
